2020-05-05  Darshit Shah  <darnir@gnu.org>

  * poke/Makefile.am: Merge two ifdef blocks into one. (Purely cosmetic)

2020-05-05  Darshit Shah  <darnir@gnu.org>

  * m4/libtextstyle-hyperlink.m4: Use an action-if-true to prevent adding it to LIBS
  AC_SEARCH_LIBS will add the library to LIBS if action-if-true is empty.
  We prevent that by adding an action-if-true, and manually including
  LTLIBTEXTSTYLE in the libraries for Poke. This allows libpoke.so to be
  build without linking against libtextstle.

2020-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (complete_struct): Add parentheses in
	expression to avoid a compiler warning.

2020-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/future/bson.pk: Minor fixes.

2020-05-04  Tim Rühsen  <tim.ruehsen@gmx.de>

	* HACKING: Fix some URLs from http: to https:

2020-05-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (complete_struct): Fix completion of normal
	fields, and add support for completing method names as well.
	* libpoke/pkl-ast.c (pkl_struct_type_traverse): Revert changes
	from commit 9e0206681.
	* testsuite/poke.repl/repl.exp (tab-completion-struct-field-1):
	New test.
	(tab-completion-struct-field-2): Likewise.
	(tab-completion-struct-field-3): Likewise.

2020-05-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-anal.h (struct pkl_anal_payload): New fields context
	and next_context.
	(pkl_anal_init_payload): Define.
	(PKL_ANAL_NO_CONTEXT): Likewise.
	(PKL_ANAL_CONTEXT_STRUCT_TYPE): Likewise.
	(PKL_ANAL_CONTEXT_METHOD): Likewise.
	* libpoke/pkl.c (rest_of_compilation): Use pkl_anal_init_payload.
	* libpoke/pkl-lex.l: Process METHOD.
	* lib/pkl-tab.y (declaration): Use defun_or_method and annotate
	function nodes as methods accordingly.
	(defun_or_method): New rule.
	(IS_DEFUN): Define.
	(IS_METHOD): Likewise.
	* libpoke/pkl-ast.h (PKL_AST_DECL_IN_STRUCT_P): Define.
	(struct pkl_ast_decl): New field in_struct_p.