@@ -16,7 +16,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
-# gnulib modules used by this package.
+# gnulib modules used for this project.
 gnulib_modules="
   accept
   array-list
@@ -55,6 +55,17 @@ gnulib_modules="
   update-copyright
   xalloc
   xstrndup
+  "
+
+# gnulib modules used in libutils/.
+libutils_modules="
+  gettext-h
+  snprintf
+  stat
+  stdarg
+  stddef
+  strerror
+  strstr
   "
 
 # TODO: Remove this after the 1.0 release. Until then, this helps developers
@@ -122,6 +133,9 @@ makeinfo    6.0
 # Poke's configure.ac requires the Autoconf macros to be copied from Jitter.
 bootstrap_post_import_hook ()
 {
+  # create gl-libutils
+  ${GNULIB_SRCDIR}/gnulib-tool --import --lib=libgnu --source-base=gl-libutils --m4-base=m4/libutils --doc-base=doc --aux-dir=build-aux --lgpl=3 --no-conditional-dependencies --libtool --without-tests --macro-prefix=libutils ${libutils_modules}
+
   echo 'Updating the Jitter submodule'
   git submodule update --init -- ./jitter
 
