@@ -1,3 +1,3 @@
-/parse-datetime.texi
 /gendocs_template
 /gendocs_template_min
+/parse-datetime.texi
