@@ -1,3 +1,13 @@
+2020-05-05  Tim Rühsen  <tim.ruehsen@gmx.de>
+
+	* .gitignore: Add /gl-libutils.
+	* Makefile.am: Add gl-libutils to SUBDIRS.
+	* bootstrap.conf: Invoke gnulib-tool to generate gl-libutils.
+	* configure.ac: Add m4/libutils to AC_CONFIG_MACRO_DIRS.
+	Add libutils_EARLY.
+	Add gl-libutils/Makefile to AC_CONFIG_FILES.
+	* libutils/Makefile.am: Use gl-libutils/libgnu.la in libutils_la_LIBADD.
+
 2020-05-05  Darshit Shah  <darnir@gnu.org>
 
   * poke/Makefile.am: Merge two ifdef blocks into one. (Purely cosmetic)
